added session Session:13 Network Layer Control Plane

--- a/Linux Adminstrtion/04. Intro to Networking.md
+++ b/Linux Adminstrtion/04. Intro to Networking.md
@@ -781,7 +781,7 @@ Alice also needs to decide which peers to _upload_ (send) chunks to. This is bas
 ---
 # Session 12: Network Layer Data Plane
 
-# The Network Layer
+## The Network Layer
 
 The primary goal of the network layer is to understand the principles behind its services. It has two key functions, or "planes":
 
@@ -792,7 +792,7 @@ The primary goal of the network layer is to understand the principles behind its
 
 This document focuses on the principles of the **data plane**.
 
-## Core Function: Host-to-Host Transport
+### Core Function: Host-to-Host Transport
 
 The fundamental service of the network layer is to transport a **segment** (from the transport layer) from a sending host to a receiving host. This process involves:
 
@@ -803,7 +803,7 @@ The fundamental service of the network layer is to transport a **segment** (from
 
 This network layer protocol runs in _every_ internet device, including both end **hosts** (laptops, phones) and **routers**.
 
-## Network Layer Service Models
+### Network Layer Service Models
 
 This defines the services and guarantees the network layer provides to the transport layer (e..g., TCP, UDP) for the "channel" transporting datagrams.
 
@@ -824,7 +824,7 @@ This is **not** a single model. A network _could_ offer various services, either
     - **Restrictions on Inter-packet Spacing:** Controls the jitter, or timing, between packets in a flow.
         
 
-### Internet's "Best-Effort" Service Model
+#### Internet's "Best-Effort" Service Model
 
 The Internet's network architecture (using the IP protocol) provides a **"best-effort" service**.
 
@@ -865,7 +865,7 @@ Despite having no guarantees, the best-effort model has been incredibly successf
 
 As the slide notes, it's hard to argue with the success of this model.
 
-### Other Service Models (Providing QoS)
+#### Other Service Models (Providing QoS)
 
 While "best-effort" is the standard for the public Internet, other network architectures and protocols _can_ provide Quality of Service (QoS) guarantees. As the comparative table shows:
 
@@ -878,7 +878,7 @@ While "best-effort" is the standard for the public Internet, other network archi
 - **Internet (Diffserv - Differentiated Services, RFC 2475):** A model for the Internet that provides relative guarantees. It makes it **possible** to guarantee bandwidth, minimize loss, and maintain order (e.g., for high-priority traffic), but provides no guarantees on timing.
     
 
-## Forwarding (Data Plane) versus Routing (Control Plane)
+### Forwarding (Data Plane) versus Routing (Control Plane)
 
 These are the two key functions of the network layer:
 
@@ -900,7 +900,7 @@ There are two main control-plane approaches:
 
 In short: **Routing plans the overall path; forwarding executes the plan at each individual router.**
 
-## How a Router Works
+### How a Router Works
 
 A router is a specialized computer designed for forwarding packets at high speed. As the architectural overview slide shows, a router is composed of two main planes:
 
@@ -977,7 +977,7 @@ It uses these layers to make its forwarding decisions. Its main components are:
         - **Result:** The packet is forwarded to **Link Interface 1**. (As shown by the "match!" arrow in the slide).
             
     
-    ##### Hardware Implementation: TCAMs
+    ###### Hardware Implementation: TCAMs
     
     To achieve the "line speed" goal, this longest prefix match lookup cannot be done in software. It is often performed in hardware using **Ternary Content Addressable Memories (TCAMs)**.
     
@@ -1011,7 +1011,7 @@ It uses these layers to make its forwarding decisions. Its main components are:
 4. **Routing Processor (Control Plane):** The "brain" (software) that runs the control plane (routing protocols/algorithms) to create and update the forwarding table. This processor operates in milliseconds and is not directly involved in forwarding every single packet. In an SDN approach, this processor would instead communicate with the central controller.
     
 
-## Internet Network Layer: IP, ICMP, and Routing
+### Internet Network Layer: IP, ICMP, and Routing
 
 As the slide diagram illustrates, the Internet's network layer (which sits between the Transport and Link layers) has several key functions and protocols:
 
@@ -1105,7 +1105,7 @@ As the slide diagram illustrates, the Internet's network layer (which sits betwe
 - **IPv6:** A newer, 128-bit address format designed to solve the shortage of IPv4 addresses.
     
 
-## Generalized Forwarding and SDN
+### Generalized Forwarding and SDN
 
 This is a more advanced concept that includes models beyond traditional IP forwarding. It is the key idea in **Software-Defined Networking (SDN)**.
 
@@ -1116,7 +1116,7 @@ This is a more advanced concept that includes models beyond traditional IP forwa
 - **SDN:** As mentioned earlier, this is a control-plane approach where the routing logic is logically separated from the data plane (forwarding hardware). This allows a central "controller" to program the forwarding tables of all routers, making the network more flexible and manageable.
     
 
-## Middleboxes
+### Middleboxes
 
 Middleboxes are network devices that perform functions beyond standard IP routing. They operate "in the middle" of the network path to monitor, filter, or transform traffic. Common examples include:
 
@@ -1127,7 +1127,7 @@ Middleboxes are network devices that perform functions beyond standard IP routin
 - **NAT gateways:** (As described above).
     
 
-## Internet Architecture
+### Internet Architecture
 
 The Internet is not one single network; it is a "network of networks." It is a massive collection of interconnected **Autonomous Systems (ASs)**.
 
@@ -1137,3 +1137,474 @@ The Internet is not one single network; it is a "network of networks." It is a m
     
 - **Peering:** Different ASs connect to each other (often at **Internet Exchange Points (IXPs)**) to exchange traffic, forming the global Internet.
 
+# Session 13: Network Layer Control Plane
+
+## Network Layer Control Plane: Our Goals
+
+### Understand Principles Behind Network Control Plane:
+
+- Traditional routing algorithms
+    
+- SDN controllers
+    
+- Network management, configuration
+    
+
+### Instantiation, Implementation in the Internet:
+
+- OSPF, BGP
+    
+- OpenFlow, ODL and ONOS controllers
+    
+- Internet Control Message Protocol: ICMP
+    
+- SNMP, YANG/NETCONF
+    
+
+## Control Plane Roadmap
+
+- Introduction
+    
+- Routing protocols
+    
+    - Link state
+        
+    - Distance vector
+        
+- Intra-ISP routing: OSPF
+    
+- Routing among ISPs: BGP
+    
+- SDN control plane
+    
+- Internet Control Message Protocol
+    
+- Network management, configuration
+    
+    - SNMP
+        
+    - NETCONF/YANG
+        
+
+## Introduction: Network-Layer Functions
+
+There are two main network-layer functions:
+
+1. **Forwarding:** Move packets from a router's input to the appropriate router output.
+    
+    - This is part of the **Data Plane**.
+        
+2. **Routing:** Determine the route taken by packets from source to destination.
+    
+    - This is part of the **Control Plane**.
+        
+
+### Two Approaches to the Control Plane
+
+There are two main approaches to structuring the network control plane:
+
+- **Per-router control (Traditional):** Each router has its own routing algorithm and control logic.
+    
+- **Logically centralized control (Software Defined Networking - SDN):** A central controller determines and distributes forwarding tables to all routers.
+    
+
+### Per-Router Control Plane (Traditional)
+
+- In this approach, individual routing algorithm components **in each and every router** interact with each other in the control plane.
+    
+- The routers run a routing algorithm, communicating with other routers to build their own local forwarding tables.
+    
+- These forwarding tables are then used by the data plane to forward packets.
+    
+
+### Software-Defined Networking (SDN) Control Plane
+
+- This is a logically centralized approach.
+    
+- A **Remote Controller** computes and installs the forwarding tables in the routers.
+    
+- The controller communicates with a "Control Agent" (CA) on each router to distribute these tables.
+    
+- This separates the control plane (the controller) from the data plane (the routers, which just forward packets based on the tables provided).
+    
+
+### Comparison: Per-Router vs. SDN Control Plane
+
+|Feature|Per-Router Control Plane (Traditional)|SDN Control Plane|
+|---|---|---|
+|**Control Logic**|Distributed; logic is inside each router.|Centralized; logic is in a remote controller.|
+|**Router Communication**|Rourouters communicate with each other to run the routing algorithm.|The controller communicates with a "Control Agent" (CA) in each router.|
+|**Forwarding Table**|Computed locally by each router.|Computed centrally by the controller and installed in routers.|
+
+## Routing Protocols
+
+- **Routing protocol goal:** Determine "good" paths (or routes) from sending hosts to receiving hosts, through the network of routers.
+    
+- **Path:** A sequence of routers that packets traverse from a given initial source host to a final destination host.
+    
+- **"Good" path:** Typically means the path with the "least cost", "fastest" route, or "least congested" route.
+    
+- Routing is considered a "top-10" networking challenge.
+    
+
+### Graph Abstraction: Link Costs (A Clearer Explanation)
+
+To figure out the "best" path, routing algorithms don't see the complex physical network. Instead, they see a simple "map" or "graph". Here’s how to understand this map:
+
+1. **Think of a map of cities and roads.**
+    
+    - **Cities = Nodes (`N`):** The cities on the map are the "nodes". In a network, a **node is just a router**.
+        
+    - **Roads = Edges (`E`):** The roads connecting the cities are the "edges". In a network, an **edge is the link** (like a cable or Wi-Fi connection) between two routers.
+        
+    - This simple map of nodes and edges is the "graph" `G = (N, E)`.
+        
+2. **Every road has a "cost".**
+    
+    - Imagine every road on your map has a number, or a "cost". This cost isn't money. It's a number that represents how "good" or "bad" that road is.
+        
+    - A **low cost (like `1`)** is a "good" road. This might be a fast, multi-lane highway with no traffic.
+        
+    - A **high cost (like `10`)** is a "bad" road. This might be a slow, bumpy dirt road or a highway that's always in a traffic jam.
+        
+3. **Connecting this to Networking:**
+    
+    - This "cost" is just a number. A network administrator can decide what it means.
+        
+    - **To find the** _**fastest**_ **path:** The cost could be based on link speed. A fast (high bandwidth) link gets a _low_ cost, and a slow link gets a _high_ cost.
+        
+    - **To find the** _**least congested**_ **path:** The cost could change based on traffic. A busy, congested link gets a _high_ cost, and an empty link gets a _low_ cost.
+        
+    - **To find the** _**fewest hops**_**:** The cost for every single link could just be `1`.
+        
+4. **The Goal: Find the "Least Cost" Path**
+    
+    - A routing algorithm acts like a GPS. It looks at this entire map (the graph) and all the "costs" on every road (edge).
+        
+    - Its goal is to find a path from a starting city (router) to a destination city (router) where the **total cost of the trip is the lowest**.
+        
+    - "Total cost" is simply the sum of the costs of all the roads you travel on.
+        
+
+#### Visual Graph Example (Mermaid)
+
+Here is a visual representation of the graph from the lecture slide. This shows the routers (nodes) and the costs of the links (edges) between them.
+
+```mermaid
+graph TD
+    subgraph "Network Graph G=(N,E)"
+        u((u)) --- |1| x((x))
+        u --- |5| v((v))
+        x --- |2| v
+        x --- |1| y((y))
+        v --- |3| w((w))
+        y --- |1| w
+        y --- |2| z((z))
+        w --- |5| z
+    end
+```
+
+#### Simple Text-Based Example
+
+Let's make a tiny map with 4 routers: `A`, `B`, `C`, and `D`.
+
+- **Our "Cities" (Nodes):** `{ A, B, C, D }`
+    
+- **Our "Roads" (Edges) and their Costs:**
+    
+    - `Cost from A to B = 1` (This is a great road)
+        
+    - `Cost from A to C = 5` (This is a terrible road)
+        
+    - `Cost from B to D = 1` (Another great road)
+        
+    - `Cost from C to D = 1` (Another great road)
+        
+
+**Problem:** What is the "least cost" path to get from `A` to `D`?
+
+**Answer:**
+
+- **Path 1:** Go `A -> C -> D`.
+    
+    - **Total Cost** = (Cost from A to C) + (Cost from C to D) = `5 + 1 = 6`.
+        
+- **Path 2:** Go `A -> B -> D`.
+    
+    - **Total Cost** = (Cost from A to B) + (Cost from B to D) = `1 + 1 = 2`.
+        
+
+The routing algorithm would **choose Path 2 (`A -> B -> D`)** because its total cost (`2`) is much lower than Path 1's total cost (`6`).
+
+## The Challenge: Making Routing Scalable
+
+Our study of routing so far has been idealized:
+
+- We assumed all routers are identical.
+    
+- We assumed the network is "flat" (one big network). ... This is **not true** in practice.
+    
+
+### Two Major Challenges:
+
+1. **Scale:**
+    
+    - The Internet has billions of destinations.
+        
+    - Routers **can't store all destinations** in their routing tables.
+        
+    - A full routing table exchange (sending this massive table) **would swamp the network links!**
+        
+2. **Administrative Autonomy:**
+    
+    - The Internet is a "network of networks" (e.g., ISPs, universities, companies).
+        
+    - Each network administrator may want to control routing _within_ its own network, using its own rules.
+        
+
+## The Solution: Internet Approach to Scalable Routing
+
+To solve the problems of scale and administrative autonomy, the Internet aggregates routers into regions known as **"autonomous systems" (AS)** (also called "domains").
+
+This creates two types of routing:
+
+1. **Intra-AS (or "intra-domain") Routing:**
+    
+    - This is routing _among routers within the same AS ("network")_.
+        
+    - All routers in an AS must run the same intra-domain protocol.
+        
+    - Routers in _different_ AS'es can run different intra-domain routing protocols.
+        
+    - **Gateway router:** A router at the "edge" of its own AS, which has one or more links to routers in other AS'es.
+        
+2. **Inter-AS (or "inter-domain") Routing:**
+    
+    - This is routing _among AS'es_.
+        
+    - Gateway routers perform this inter-domain routing (as well as intra-domain routing).
+        
+
+## Interconnected ASes and Forwarding Tables
+
+How do these two types of routing work together? The forwarding table in any given router is configured by _both_ intra-AS and inter-AS routing algorithms.
+
+- **Intra-AS routing** determines the forwarding entries for any destinations **within** that router's own AS.
+    
+- **Inter-AS & Intra-AS routing** _combine_ to determine forwarding entries for **external** destinations (destinations in other AS'es).
+    
+
+## Inter-AS Routing's Role in Intradomain Forwarding
+
+This describes _how_ an internal router knows how to forward a packet to an external destination.
+
+- **Scenario:** Suppose a router inside AS1 receives a datagram that is destined for a network _outside_ of AS1.
+    
+- **The Problem:** That router needs to forward the packet to the correct _gateway router_ within AS1. But which one?
+    
+- **The Solution:** The AS1 **inter-domain routing protocol** must do two things:
+    
+    1. **Learn reachability:** It must learn which external destinations are reachable through AS2, which are reachable through AS3, and so on.
+        
+    2. **Propagate info:** It must propagate this reachability information to **all** of the internal routers in AS1.
+        
+
+(This is how an internal router, like `1d` in AS1, knows to send a packet destined for AS3 to its gateway router `1c`).
+
+## Intra-AS Routing: Routing Within an AS
+
+These are the most common intra-AS routing protocols (also known as Interior Gateway Protocols or IGPs):
+
+- **RIP: Routing Information Protocol [RFC 1723]**
+    
+    - This is a classic **Distance-Vector** (DV) protocol.
+        
+    - DVs (routing tables) are exchanged every 30 seconds.
+        
+    - It is no longer widely used in modern networks.
+        
+- **EIGRP: Enhanced Interior Gateway Routing Protocol [RFC 7868]**
+    
+    - This is also **DV based**.
+        
+    - It was formerly Cisco-proprietary for decades but became an open standard in 2013.
+        
+- **OSPF: Open Shortest Path First [RFC 2328]**
+    
+    - This is a **link-state** routing protocol.
+        
+    - The IS-IS protocol (an ISO standard, not an RFC standard) is essentially the same as OSPF.
+        
+
+## Hierarchical OSPF
+
+OSPF scales to larger networks by using a **two-level hierarchy**:
+
+1. **Local Area:** A segment of the AS, containing a group of routers.
+    
+2. **Backbone:** The central part of the AS that connects all the local areas.
+    
+
+### How it Works:
+
+- **Link-State Advertisements (LSAs) are flooded only within their area or within the backbone.** This significantly reduces the amount of routing traffic and information each router needs to process.
+    
+- Each router has a **detailed area topology** (knows all routers and links within its own area).
+    
+- However, a router only knows the **direction to reach other destinations** outside its area (via an Area Border Router), not the full detailed topology of other areas or external AS'es.
+    
+
+### Router Roles in Hierarchical OSPF:
+
+- **Local Routers (Internal Routers):**
+    
+    - These are routers entirely within a non-backbone area (e.g., `area 1`, `area 2`, `area 3`).
+        
+    - They **flood LSAs only within their own area**.
+        
+    - They **compute routing within their own area** using Dijkstra's algorithm.
+        
+    - They forward packets destined for outside their area via an **Area Border Router**.
+        
+- **Area Border Routers:**
+    
+    - These routers connect one or more local areas to the backbone area.
+        
+    - They **summarize distances** to destinations within their own local area(s).
+        
+    - They **advertise these summarized distances into the backbone**. This prevents the entire backbone from needing to know every detail of every local area.
+        
+    - In the diagram, routers connecting `area 1`, `area 2`, `area 3` to the `backbone` are Area Border Routers.
+        
+- **Backbone Routers:**
+    
+    - These routers operate within the `backbone` area.
+        
+    - They **run OSPF limited to the backbone**.
+        
+    - They route traffic between different areas.
+        
+- **Boundary Router:**
+    
+    - This is a specific type of **Backbone Router** that connects the entire OSPF AS to **other Autonomous Systems (ASes)**.
+        
+    - It's responsible for inter-AS routing.
+        
+    - In the diagram, the router at the top that connects to "other ASes" is a Boundary Router.
+        
+
+## Internet Inter-AS Routing: BGP (Border Gateway Protocol)
+
+BGP is the **de facto inter-domain routing protocol** and is often referred to as the "glue that holds the Internet together." It handles routing between different Autonomous Systems (ASes).
+
+#### Key Functions of BGP:
+
+BGP allows a subnet to advertise its existence to the rest of the Internet, essentially saying: "I am here, here is who I can reach, and how."
+
+BGP provides each Autonomous System (AS) with the means to:
+
+1. **Obtain destination network reachability information from neighboring ASes (eBGP):**
+    
+    - **eBGP (External BGP):** Used for exchanging routing information between different ASes. A BGP router in one AS will learn about destination networks in other ASes from its eBGP neighbors.
+        
+2. **Determine routes to other networks based on reachability information and policy:**
+    
+    - BGP routers use the reachability information they receive, combined with local routing policies (e.g., cost, security, business agreements), to choose the best paths to external networks. Unlike OSPF which is purely shortest path, BGP is very policy-driven.
+        
+3. **Propagate reachability information to all AS-internal routers (iBGP):**
+    
+    - **iBGP (Internal BGP):** Used for distributing external reachability information _within_ an AS. Once an AS's border router learns about external networks via eBGP, it uses iBGP to tell all other internal routers in its AS how to reach those external networks (typically by directing them towards the appropriate gateway router).
+        
+4. **Advertise (to neighboring networks) destination reachability information:**
+    
+    - An AS's BGP routers will advertise the destination networks that _it_ can reach (either its own internal networks or external networks it has learned about) to its eBGP neighbors in other ASes. This allows other parts of the Internet to know how to send traffic to or through this AS.
+        
+
+#### BGP Basics: Sessions and Path Vectors
+
+- **BGP Session:** Two BGP routers (called "peers") exchange BGP messages over a semi-permanent **TCP connection**.
+    
+- **Path Vector Protocol:** BGP is a "path vector" protocol. This means it advertises **paths** to different destination network prefixes.
+    
+- **Example:** When gateway router `3a` (in AS3) advertises a path to gateway `2c` (in AS2), it's not just saying "I can reach network X". It's saying "I can reach network X via the path `AS3,X`".
+    
+    - This is a **promise** that AS3 will forward datagrams towards X.
+        
+
+#### eBGP and iBGP Connections
+
+- **eBGP (External BGP):**
+    
+    - This is the BGP connection between gateway routers in **different** Autonomous Systems.
+        
+    - This is used to advertise paths to external networks.
+        
+    - In the diagram, the connection between `1c` and `2a` is eBGP. The connection between `2c` and `3a` is also eBGP.
+        
+- **iBGP (Internal BGP):**
+    
+    - This is the BGP connection _within_ the same Autonomous System.
+        
+    - This is used to distribute the external path information (learned via eBGP) to all the _internal_ routers in that AS.
+        
+    - In the diagram, the connections between `1a`, `1b`, `1c`, and `1d` are iBGP.
+        
+
+#### BGP Protocol Messages [RFC 4371]
+
+BGP messages are exchanged between peers over their TCP connection.
+
+- **OPEN:** Opens a TCP connection to a remote BGP peer and authenticates the sending peer.
+    
+- **UPDATE:** This is the most important message. It **advertises a new path** (or withdraws an old, invalid path).
+    
+- **KEEPALIVE:** Keeps the connection alive in the absence of UPDATEs. It also acts as an ACK for an OPEN request.
+    
+- **NOTIFICATION:** Reports errors in a previous message or is used to close a connection.
+    
+
+#### BGP Path Advertisement & Multiple Paths
+
+- A gateway router may learn about **multiple paths** to the same destination.
+    
+- **Example:**
+    
+    - AS1 gateway router `1c` learns a path to `X` from `2a`. The path is `AS2,AS3,X`.
+        
+    - AS1 gateway router `1c` _also_ learns a path to `X` from `3a` (if they had a direct link). The path is `AS3,X`.
+        
+- BGP uses this information, plus policy, to **select the best path** and advertise that path to its internal routers (via iBGP).
+    
+
+#### Populating Forwarding Tables (BGP + OSPF)
+
+This is a critical concept showing how Inter-AS and Intra-AS protocols work together.
+
+1. A gateway router (e.g., `1c`) learns about an external path to `X` via eBGP.
+    
+2. `1c` uses **iBGP** to propagate this path to all internal routers (e.g., `1a`, `1b`, `1d`). They all learn: "The path to X goes through `1c`."
+    
+3. Now, an internal router like `1d` needs to send a packet to `X`.
+    
+    - It knows from **iBGP** that the packet must go to gateway router `1c`.
+        
+    - But how does it get to `1c`? It uses the **intra-domain routing (e.g., OSPF)** to find the shortest _internal_ path to `1c`.
+        
+    - OSPF tells `1d` that to get to `1c`, it should use its local interface `1`.
+        
+4. The forwarding table at `1d` is built: `dest: X`, `interface: 1`.
+    
+
+#### Hot Potato Routing
+
+- **Scenario:** An internal router (like `2d`) learns via **iBGP** that it can route to `X` via _multiple_ gateways in its own AS (e.g., via `2a` or `2c`).
+    
+- **The Problem:** Which gateway should it choose?
+    
+- **Hot Potato Routing Solution:** The router chooses the local gateway that has the **least intra-domain cost**.
+    
+    - It looks at its **OSPF (intra-AS) link weights**.
+        
+    - If the cost to get to `2a` is `201` and the cost to get to `2c` is `263`, the router `2d` will choose `2a`.
+        
+    - It sends the packet "out of its AS" as quickly as possible (like a "hot potato"), without worrying about the inter-domain cost (what happens _after_ it leaves the AS).
